kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-marcoshssilva-com-br
spec:
  selector:
    app: deployment-nextjs-marcoshssilva-com-br
  ports:
  - port: 3000
    targetPort: 3000
